--- a/smallgroups.html
+++ b/smallgroups.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qtpdQZQziq" once="menu" id="menu2-5k" data-rv-view="958">
+<section class="menu cid-qtpdQZQziq" once="menu" id="menu2-5k" data-rv-view="278">
 
     
 
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/d">free web software</a></section><section class="features18 popup-btn-cards cid-qsGoZBn91z" id="features18-1p" data-rv-view="955">
+<section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><section class="features18 popup-btn-cards cid-qsGoZBn91z" id="features18-1p" data-rv-view="275">
 
     
 
